--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -9,7 +9,7 @@ server:
 graphql:
   servlet:
     maxQueryDepth: 5
-    exception-handlers-enabled: true
+    exception-handlers-enabled: false
   playground:
     headers:
       Authorization: Bearer TOKEN
